--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ recurso.nao-encontrado=Recurso n\u00E3o encontrado
 recurso.operacao-nao-permitida:Opera\u00E7\u00E3o n\u00E3o permitida
 recurso.produto-invalido:Produto(s) de outro fornecedor ou com quantidade igual 0
 fornecedor.com-venda:Fornecedor com venda lan\u00E7ada n\u00E3o ser deletado!
+venda.produto-outro-fornecedor:Produtos n\u00E3o podem ser diferentes do fornecedor informado!
 
 fornecedor.nome=Nome
 fornecedor.cnpj=CNPJ
